<?xml version="1.0" encoding="utf-8"?>


<!--中間导航栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_privacy"
        android:title="@string/menu_account" />

    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_data" />

    <item
        android:id="@+id/nav_baby"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/menu_baby" />

    <item
        android:id="@+id/nav_babysitter"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/menu_babysitter" />

    <item
        android:id="@+id/nav_notice"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/menu_notice" />

</menu>