<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    android:padding="5dp"
    android:scrollbars="vertical"
    android:background="@color/background">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/menu_account"
        android:textColor="@color/title"
        android:textSize="30sp" />



    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:gravity="left"
        android:text="@string/title_change_password"
        android:textColor="@color/title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:hint="@string/hint_please_input_old_password"
                android:inputType="textPassword" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:hint="@string/hint_please_input_new_password"
                android:inputType="textPassword" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_check_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_check_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:hint="@string/hint_please_check_password"
                android:inputType="textPassword" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_password"
            android:layout_height="wrap_content"
            android:layout_width="64dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/title"
            android:layout_marginTop="16dp"
            android:text="@string/lab_save" />

        <Button
            android:id="@+id/btn_cancel_password"
            android:layout_height="wrap_content"
            android:layout_width="64dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/title"
            android:layout_marginTop="16dp"
            android:text="@string/lab_cancel" />

    </LinearLayout>



</LinearLayout>

</ScrollView>